# jupyter_server_terminals

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.rst  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: test.yml
docs/: README.md  doc-requirements.txt  environment.yml
docs/source/: api.rst  conf.py  index.rst
jupyter-config/: jupyter_server_terminals.json
jupyter_server_terminals/: __init__.py  _version.py  api_handlers.py  app.py  base.py  conftest.py  handlers.py  rest-api.yml  terminalmanager.py
jupyter_server_terminals/test/: test_terminal.py
tests/: test_auth.py  test_terminal.py
