[metadata]
name = jupyter_server_terminals
version = attr: jupyter_server_terminals._version.__version__
description = A Jupyter Server Extension Providing Terminals.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://jupyter.org
platforms = Linux, Mac OS X, Windows
keywords = ipython, jupyter
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    jupyter_server>=1
    terminado>=0.8.3
    pywinpty;os_name=='nt'

[options.extras_require]
test =
    coverage
    pytest>=6.0
    pytest_tornasync
    pytest-cov

[options.packages.find]
exclude = ['docs*', 'tests*']

[options.data_files]
etc/jupyter/jupyter_server_config.d =
    jupyter-config/jupyter_server_terminals.json

[flake8]
ignore = E, C, W, F403, F811, F841, E402, I100, I101, D400
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    setup.py
