[metadata]
name = jupyter_server_terminals
version = attr: jupyter_server_terminals._version.__version__
description = A Jupyter Server Extension Providing Terminals.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://jupyter.org
platforms = Linux, Mac OS X, Windows
keywords = ipython, jupyter
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    terminado>=0.8.3
    pywinpty>=2.0.3;os_name=='nt'

[options.extras_require]
test =
    coverage
    pytest>=6.0
    pytest_tornasync
    pytest-cov
    pytest-timeout
    jupyter_server[test] @ git+https://github.com/Zsailer/jupyter_server.git@jupyter_server_terminals

[options.packages.find]
exclude = ['docs*', 'tests*']

[options.data_files]
etc/jupyter/jupyter_server_config.d =
    jupyter-config/jupyter_server_terminals.json

[flake8]
ignore = E501, W503, E402
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    setup.py
enable-extensions = G
extend-ignore =
    G001, G002, G004, G200, G201, G202,
    # black adds spaces around ':'
    E203,
per-file-ignores =
    # B011: Do not call assert False since python -O removes these calls
    # F841 local variable 'foo' is assigned to but never used
    tests/*: B011, F841
